# nix-cpp23-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
nixpkg/: template.nix
src/: CMakeLists.txt  main.cc  msg.cc
src/include/: msg.hh
test/: CMakeLists.txt  test_main.cc
